--- a/manifest.json
+++ b/manifest.json
@@ -1,35 +1,35 @@
 {
-  "id": "com.bartolomeu.wdnesday",
-  "name": "Wdnesday — Assistente Pessoal",
-  "short_name": "Wdnesday",
-  "description": "Seu assistente pessoal online e offline com clima, lembretes, Wikipedia e muito mais.",
+  "name": "GEO-MP",
+  "short_name": "GEO-MP",
+  "description": "🌍 Conecte-se com amigos em tempo real, compartilhe localização e trace rotas.",
+  "id": "geo-mp.app", 
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#1e1e1e",
-  "theme_color": "#e63946",
+  "background_color": "#212121",
+  "theme_color": "#ff4d4d",
   "orientation": "portrait",
-  "categories": ["productivity", "assistant", "utilities"],
-  "prefer_related_applications": false,
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     }
   ],
   "screenshots": [
     {
       "src": "screenshot.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide"
+      "sizes": "540x720",
+      "type": "image/png"
+    },
+    {
+      "src": "screenshot1.png",
+      "sizes": "540x720",
+      "type": "image/png"
     }
   ]
 }
